--- a/shattered.html
+++ b/shattered.html
@@ -253,7 +253,7 @@
 
       <!-- FOOT NAV -->
       <nav class="proj-foot-nav" aria-label="Project navigation">
-        <a href="./wdcc.html" rel="next">Next →</a>
+        <a href="./economy.html" rel="next">Next →</a>
       </nav>
     </main>
 
