Moved WDCC to Pending

--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
           </button>
           <ul id="menu-personal" class="menu" role="menu">
             <li role="none">
-              <a role="menuitem" href="./wdcc.html"
-                >Wacky’s Dungeon Combat Club</a
-              >
             </li>
             <li role="none">
               <a role="menuitem" href="./shattered.html"
@@ -157,6 +154,7 @@
               gain infamy in the WDCC.
             </p>
             <p class="role">Role: Solo Developer</p>
+            <p>Coming Soon</p>
           </div>
 
           <div class="project-card">
